--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/pom.xml
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/pom.xml
@@ -78,7 +78,7 @@
                 <artifactId>bitcoin-rpc</artifactId>
                 <version>1.2.0</version>
                 <scope>system</scope>
-				<systemPath>${project.basedir}/lib/bitcoin-rpc-1.2.0.jar</systemPath>
+				<systemPath>D:/crazy/web3-exchange/code/btc_eth_bizzan_contract_Exchange_ztuo_jiaoyisuo/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/lib/bitcoin-rpc-1.2.0.jar</systemPath>
             </dependency>
             <dependency>
                 <groupId>com.bizzan.wallet</groupId>
