--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/usdt/pom.xml
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/usdt/pom.xml
@@ -42,7 +42,7 @@
             <groupId>com.spark.bc</groupId>
             <artifactId>bitcoin-rpc</artifactId>
             <scope>system</scope>
-			<systemPath>${project.basedir}/lib/bitcoin-rpc-1.2.0.jar</systemPath>
+            <systemPath>D:/crazy/web3-exchange/code/btc_eth_bizzan_contract_Exchange_ztuo_jiaoyisuo/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/lib/bitcoin-rpc-1.2.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
