--- a/01_bizzan_framework/01_bizzan_framework/admin/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/admin/src/main/resources/dev/application.properties
@@ -3,17 +3,18 @@ server.context-path=/admin
 spring.application.name=admin
 #==========================================================================================================
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 spring.data.mongodb.database=bizzan
+
 #redis
 ## redis\u670D\u52A1\u5668\u914D\u7F6E
 #spring.redis.cluster.nodes=39.104.119.155:6380
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-active=300
@@ -28,7 +29,7 @@ spring.redis.timeout=30000
 ## \u8FDE\u63A5\u5BC6\u7801
 spring.redis.password=dmsLjNt3J5yfCydN
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 eureka.instance.prefer-ip-address=true
 #aliyun config
@@ -68,7 +69,7 @@ spring.jackson.time-zone=GMT+8
 spring.session.store-type=none
 
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # \u91CD\u4F20\u6B21\u6570
 spring.kafka.producer.retries=0
 # \u6BCF\u6B21\u6279\u5904\u7406\u7684\u5927\u5C0F
