--- a/01_bizzan_framework/01_bizzan_framework/bitrade-job/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/bitrade-job/src/main/resources/dev/application.properties
@@ -3,7 +3,7 @@ server.context-path=/timejob
 spring.session.store-type=none
 
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -23,10 +23,10 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat,wall,log4j
 
 #mongodb
-spring.data.mongodb.uri=mongodb://root:root@172.22.0.6:27017/bitrade
+spring.data.mongodb.uri=mongodb://root:root@localhost:27017/bitrade
 
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # \u91CD\u4F20\u6B21\u6570
 spring.kafka.producer.retries=0
 # \u6BCF\u6B21\u6279\u5904\u7406\u7684\u5927\u5C0F
@@ -54,10 +54,10 @@ es.private.ip=es-cn-0pp0pbvsh0006ctyy.elasticsearch.aliyuncs.com
 es.port=9200
 
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 
 ## redis\u670D\u52A1\u5668\u914D\u7F6E
-spring.redis.cluster.nodes=172.22.0.6:6380
+spring.redis.cluster.nodes=localhost:6380
 ## \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-active=300
 ## \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
