--- a/01_bizzan_framework/01_bizzan_framework/chat/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/chat/src/main/resources/dev/application.properties
@@ -2,15 +2,15 @@ server.port=6008
 server.context-path=/chat
 #============================================================================================
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 #redis
 ## redis\u670D\u52A1\u5668\u914D\u7F6E
 #spring.redis.cluster.nodes=39.104.119.155:6380
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-active=300
