--- a/01_bizzan_framework/01_bizzan_framework/exchange-api/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/exchange-api/src/main/resources/dev/application.properties
@@ -5,7 +5,7 @@ server.context-path=/exchange
 #redis
 ## redis服务器配置
 #spring.redis.cluster.nodes=39.104.119.155:6380
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=300
@@ -21,13 +21,13 @@ spring.redis.timeout=30000
 spring.redis.password=dmsLjNt3J5yfCydN
 
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 #jpa
 #spring.jpa.hibernate.ddl-auto=update
 # 每日撤单限制为0不限制
 #===================================end===================================================================
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=0
 # 每次批处理的大小
@@ -46,7 +46,7 @@ spring.kafka.consumer.maxPollRecordsConfig=50
 spring.devtools.restart.enabled=true
 
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -79,5 +79,5 @@ es.private.ip=#
 es.port=9200
 
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
