--- a/01_bizzan_framework/01_bizzan_framework/exchange/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/exchange/src/main/resources/dev/application.properties
@@ -3,16 +3,20 @@ spring.application.name=service-exchange-trade
 spring.session.store-type=none
 
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
-
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=mongo
+spring.data.mongodb.database=bizzan
+spring.data.mongodb.authentication-database=admin
 #euruka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 # 注册时使用ip而不是主机名
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=3
 # 每次批处理的大小
@@ -31,7 +35,7 @@ spring.kafka.consumer.maxPollRecordsConfig=50
 spring.devtools.restart.enabled=true
 
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
