--- a/01_bizzan_framework/01_bizzan_framework/market/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/market/src/main/resources/dev/application.properties
@@ -3,7 +3,7 @@ server.context-path=/market
 spring.session.store-type=none
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 
@@ -13,10 +13,17 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+#spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=mongo
+spring.data.mongodb.database=bizzan
+spring.data.mongodb.authentication-database=admin
+
 
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=0
 # 每次批处理的大小
@@ -35,7 +42,7 @@ spring.kafka.consumer.maxPollRecordsConfig=50
 spring.devtools.restart.enabled=true
 
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 
 eureka.instance.prefer-ip-address=true
@@ -75,7 +82,7 @@ aqmd.netty.websocket-port=28985
 #redis47.90.121.145
 ## redis服务器配置
 ##spring.redis.cluster.nodes=192.168.0.101:6379
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=300
