--- a/01_bizzan_framework/01_bizzan_framework/otc-api/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/otc-api/src/main/resources/dev/application.properties
@@ -2,7 +2,7 @@ server.port=6006
 server.context-path=/otc
 
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=0
 # 每次批处理的大小
@@ -22,7 +22,7 @@ spring.kafka.consumer.maxPollRecordsConfig=50
 #redis
 ## redis 服务器配置
 #spring.redis.cluster.nodes=39.104.119.155:6380
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=300
@@ -38,7 +38,7 @@ spring.redis.timeout=30000
 spring.redis.password=dmsLjNt3J5yfCydN
 
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 spring.application.name=otc-api
 
 #druid connection pool
@@ -77,7 +77,7 @@ spring.jackson.time-zone=GMT+8
 #devtools
 spring.devtools.restart.enabled=true
 
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -88,7 +88,7 @@ spark.system.data-center-id=1
 spark.system.host=http://www.btxchain.com
 #spark.system.host=http://api.otc.wxmarket.cn
 
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 
 #ES配置文件
 es.username=
