--- a/01_bizzan_framework/01_bizzan_framework/ucenter-api/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/ucenter-api/src/main/resources/dev/application.properties
@@ -6,7 +6,7 @@ logging.level.*=debug
 #====================================================================================================
 #====================================================================================================
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 
 eureka.instance.prefer-ip-address=true
@@ -16,13 +16,13 @@ aliyun.accessKeySecret=AMaZnNtRB9Ztph552hSj1SKTCnbu2g
 aliyun.ossEndpoint=oss-cn-hongkong.aliyuncs.com
 aliyun.ossBucketName=btxchain
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
 #redis47.90.121.145
 ## redis服务器配置
 #spring.redis.cluster.nodes=172.17.0.5:6379
-spring.redis.host:172.22.0.6
+spring.redis.host:localhost
 spring.redis.port:6379
 ## 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=300
@@ -37,8 +37,10 @@ spring.redis.timeout=30000
 ## 连接密码
 spring.redis.password=dmsLjNt3J5yfCydN
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 spring.data.mongodb.database=bizzan
+
+
 #jpa
 #spring.jpa.hibernate.ddl-auto=update
 # sms
@@ -83,7 +85,7 @@ transfer.smac=
 #====================================================================================================
 #====================================================================================================
 #kafka
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=0
 # 每次批处理的大小
