--- a/01_bizzan_framework/01_bizzan_framework/wallet/src/main/resources/dev/application.properties
+++ b/01_bizzan_framework/01_bizzan_framework/wallet/src/main/resources/dev/application.properties
@@ -4,10 +4,10 @@ spring.application.name=service-wallet
 #===========================================================================================
 #===========================================================================================
 #eureka
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 
 #datasource
-spring.datasource.url=jdbc:mysql://172.22.0.6:3306/exchange?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange?characterEncoding=utf-8&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=exchange
 spring.datasource.password=NjfKttzTsrWeJ8jA1
@@ -20,7 +20,7 @@ spring.session.store-type=none
 
 #kafka
 #spring.kafka.bootstrap-servers=39.104.97.192:9092,39.104.97.192:19092,39.104.97.192:29092
-spring.kafka.bootstrap-servers=172.22.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # 重传次数
 spring.kafka.producer.retries=0
 # 每次批处理的大小
@@ -57,7 +57,7 @@ spring.datasource.filters=stat,wall,log4j
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 #mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.6:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 spring.data.mongodb.database=bizzan
 #jpa
 #spring.jpa.hibernate.ddl-auto=update
