feat(wallet): 添加通过私钥导入钱包功能并更新配置- 在 EthService 中新增 importWalletFromPrivateKey 方法，支持通过私钥导入钱包 - 在 WalletController 中新增 /rpc/import-private-key 接口，用于接收私钥导入请求 - 调整 Account、Coin、Contract 类中字段的 getter 方法顺序，增强代码可读性 - 更新 bitcoin、eth、usdt 模块的 application.properties 配置文件中的 Kafka、MongoDB 和 Eureka 地址- 修改 ETH 和 USDT 的 RPC 节点地址为新的测试网络节点 - 删除旧版 README.md 内容，替换为新版课程大纲文档- 移除了项目描述及架构设计文档的内容

--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/bitcoin/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/bitcoin/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=7001
 spring.application.name=service-rpc-btc
 #kafka
 # Kafka\u5355\u673A\u914D\u7F6E
-spring.kafka.bootstrap-servers=172.22.0.9:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # \u9ED8\u8BA4\u7EC4
 spring.kafka.consumer.group-id=default-group
 # \u9ED8\u8BA4\u4E3B\u9898
@@ -13,9 +13,9 @@ spring.kafka.listener.concurrency= 3
 spring.kafka.producer.batch-size= 1000
 
 # mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.9:27017/bizzan
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 # \u4EE5IP\u5730\u5740\u6CE8\u518C\u5230\u670D\u52A1\u4E2D\u5FC3\uFF0C\u76F8\u4E92\u6CE8\u518C\u4F7F\u7528IP\u5730\u5740\u0090\u008D
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
