--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=7003
 spring.application.name=service-rpc-eth
 #kafka
 # \u6307\u5B9Akafka \u4EE3\u7406\u5730\u5740\uFF0C\u53EF\u4EE5\u591A\u4E2A
-spring.kafka.bootstrap-servers=172.19.0.9:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # \u00E6\u008C\u0087\u00E5\u00AE\u009A\u00E9\u00BB\u0098\u00E8\u00AE\u00A4\u00E6\u00B6\u0088\u00E8\u00B4\u00B9\u00E8\u0080\u0085group id
 spring.kafka.consumer.group-id=default-group
 # \u00E6\u008C\u0087\u00E5\u00AE\u009A\u00E9\u00BB\u0098\u00E8\u00AE\u00A4topic id
@@ -12,13 +12,13 @@ spring.kafka.listener.concurrency=1
 # 每次批量发送消息的数量
 spring.kafka.producer.batch-size=1000
 # mongodb
-spring.data.mongodb.uri=mongodb://172.22.0.9:27017/bizzan
-eureka.client.serviceUrl.defaultZone=http://172.22.0.6:7000/eureka/
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 # 注册时使用ip而不是主机名
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 #币种信息配置
-coin.rpc=http://172.22.0.14:8051
+coin.rpc=https://api.zan.top/node/v1/eth/sepolia/f5758c66b73a45cfbfbe65620472af6e
 coin.name=Ethereum
 coin.unit=ETH
 coin.keystore-path=/mnt/data/keystore
