--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/usdt/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/usdt/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=7002
 spring.application.name=service-rpc-usdt
 #kafka
 # \u00E6\u008C\u0087\u00E5\u00AE\u009Akafka \u00E4\u00BB\u00A3\u00E7\u0090\u0086\u00E5\u009C\u00B0\u00E5\u009D\u0080\u00EF\u00BC\u008C\u00E5\u008F\u00AF\u00E4\u00BB\u00A5\u00E5\u00A4\u009A\u00E4\u00B8\u00AA
-spring.kafka.bootstrap-servers=172.19.0.6:9092
+spring.kafka.bootstrap-servers=localhost:9092
 # \u00E6\u008C\u0087\u00E5\u00AE\u009A\u00E9\u00BB\u0098\u00E8\u00AE\u00A4\u00E6\u00B6\u0088\u00E8\u00B4\u00B9\u00E8\u0080\u0085group id
 spring.kafka.consumer.group-id=default-group
 # \u00E6\u008C\u0087\u00E5\u00AE\u009A\u00E9\u00BB\u0098\u00E8\u00AE\u00A4topic id
@@ -12,14 +12,15 @@ spring.kafka.listener.concurrency= 3
 # \u00E6\u00AF\u008F\u00E6\u00AC\u00A1\u00E6\u0089\u00B9\u00E9\u0087\u008F\u00E5\u008F\u0091\u00E9\u0080\u0081\u00E6\u00B6\u0088\u00E6\u0081\u00AF\u00E7\u009A\u0084\u00E6\u0095\u00B0\u00E9\u0087\u008F
 spring.kafka.producer.batch-size= 1000
 # mongodb
-spring.data.mongodb.uri=mongodb://bizzan:tydusl36dds1@172.19.0.6:27017/wallet
+spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/bizzan?authSource=admin
 
-eureka.client.serviceUrl.defaultZone=http://172.19.0.6:7000/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 # \u00E6\u00B3\u00A8\u00E5\u0086\u008C\u00E6\u0097\u00B6\u00E4\u00BD\u00BF\u00E7\u0094\u00A8ip\u00E8\u0080\u008C\u00E4\u00B8\u008D\u00E6\u0098\u00AF\u00E4\u00B8\u00BB\u00E6\u009C\u00BA\u00E5\u0090\u008D
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
 
-coin.rpc=http://bizzan:8897364ddefs@127.0.0.1:8334/
+#coin.rpc=http://bizzan:8897364ddefs@127.0.0.1:8334/
+coin.rpc=https://chaotic-lively-telescope.btc-testnet.quiknode.pro/a6079d5e101f3f29d4270f19ed3dd23f8894fc4c
 coin.name=USDT
 coin.unit=USDT
 coin.password=123456
