refactor(core): 统一使用BigDecimal类型处理汇率- 修改Coin实体类中usdRate字段类型从double为BigDecimal - 更新AssetController中汇率设置逻辑，避免不必要的类型转换- 调整CheckExchangeRate任务中的汇率工厂设置方法 - 更新CoinExchangeFactoryConfig配置类中的汇率初始化逻辑 -优化CoinExchangeRate组件中的USDT/CNY汇率同步实现 - 引入validation-api依赖以增强数据校验能力- 升级unirest-java版本以支持新的HTTP客户端特性

--- a/01_bizzan_framework/01_bizzan_framework/market/pom.xml
+++ b/01_bizzan_framework/01_bizzan_framework/market/pom.xml
@@ -113,9 +113,14 @@
             <artifactId>shiro-quartz</artifactId>
             <version>1.4.0</version>
         </dependency>
-	</dependencies>
-	<profiles>
-		<profile>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+ </dependencies>
+ <profiles>
+  <profile>
 			<id>dev</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
