--- a/01_bizzan_framework/01_bizzan_framework/exchange-core/pom.xml
+++ b/01_bizzan_framework/01_bizzan_framework/exchange-core/pom.xml
@@ -54,6 +54,11 @@
         </dependency>
 
         <!---QueryDSL结束-->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
