chore(config): 移除冗余的 Maven 配置属性
- 删除 .classpath 文件中多个模块的 maven.pomderived 属性- 删除 .classpath 文件中多个模块的 ignore_optional_problems 属性
- 删除 .classpath 文件中多个模块的 m2e-apt 属性
- 简化 act.iml 和 bch.iml 文件中的模块配置- 更新 eth 模块的 keystore 路径配置
- 添加 chain-id 配置项到 eth 模块- 完善 MySQL 和 MongoDB 数据库表结构文档
- 增加系统主要数据表汇总清单
- 补充 MongoDB 表用途说明文档

--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
@@ -21,7 +21,8 @@ eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.applicatio
 coin.rpc=https://api.zan.top/node/v1/eth/sepolia/f5758c66b73a45cfbfbe65620472af6e
 coin.name=Ethereum
 coin.unit=ETH
-coin.keystore-path=/mnt/data/keystore
+coin.chain-id=11155111
+coin.keystore-path=d:/keystore
 #/home/ubuntu/data/keystore
 #初始化币种信息
 coin.init-block-height=12269076
