docs(withdraw): 更新提币流程文档并优化配置
- 简化文档标题为“详解”
- 添加两张流程图截图以增强说明- 更新ETH钱包配置文件中的提币地址和密码字段- 在短信验证码发送逻辑中增加日志记录以便调试

--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/eth/src/main/resources/application.properties
@@ -27,8 +27,8 @@ coin.keystore-path=d:/keystore
 #初始化币种信息
 coin.init-block-height=9580353
 coin.step=5
-coin.withdraw-wallet=UTC--2020-06-04T04-31-19.143713644Z--87b80977f855c58afe3ae457857c489acb996940
-coin.withdraw-wallet-password=btxchain123
+coin.withdraw-wallet=UTC--2025-11-07T14-33-13.60000000Z--9aca38b6f9b3de71283b25f02490230dfecf2f46.json
+coin.withdraw-wallet-password=
 coin.gas-limit=200000
 coin.min-collect-amount=0.001
 coin.ignore-from-address=0x87b80977f855c58afe3ae457857c489acb996940
