--- a/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/bitcoin/src/main/resources/application.properties
+++ b/02_bizzan_wallet_rpc/02_bizzan_wallet_rpc/bitcoin/src/main/resources/application.properties
@@ -19,7 +19,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:7000/eureka/
 # \u4EE5IP\u5730\u5740\u6CE8\u518C\u5230\u670D\u52A1\u4E2D\u5FC3\uFF0C\u76F8\u4E92\u6CE8\u518C\u4F7F\u7528IP\u5730\u5740\u0090\u008D
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${spring.application.name}:${server.port}
-
-coin.rpc=http://yuyanke:12345678@172.22.0.14:8332/
+coin.rpc=http://user:pass@127.0.0.1:18443/
 coin.name=Bitcoin
 coin.unit=BTC
